packages/parser/test/tokenizer/E0005.txt
'\w'
===== err =====
/test/tokenizer/E0005.txt:1:1: SyntaxError: E0005 - Illegal character escape sequence
1 | '\w'
  | ~~~
